force-app/main/default/objects/Premises__c/fields/Premise_Type__c.field-meta.xml
<CustomField>
    <fullName>Premise_Type__c</fullName>
    <description>Denotes the type of premise as either Residential, Small Non-Residential, or Large Non-Residential.</description>
    <inlineHelpText>Denotes the type of premise as either Residential, Small Non-Residential, or Large Non-Residential.</inlineHelpText>
    <label>Premise Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>