force-app/main/default/objects/Premises__c/fields/Processing_Flag__c.field-meta.xml
<CustomField>
    <fullName>Processing_Flag__c</fullName>
    <description>Minimum = gross value &lt;= $87 per day</description>
    <label>Processing Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compressor Fuel</fullName>
            </value>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>Helium</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Minimum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>