force-app/main/default/objects/Premises__c/fields/Processing_Flag_Code__c.field-meta.xml
<CustomField>
    <fullName>Processing_Flag_Code__c</fullName>
    <formula>LEFT(TEXT(Processing_Flag__c), 1)</formula>
    <label>Processing Flag Code</label>
    <type>Text</type>
</CustomField>