force-app/main/default/objects/Premises__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Gas choice program</description>
    <inlineHelpText>Gas choice program</inlineHelpText>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ag</fullName>
            </value>
            <value>
                <fullName>Nebraska</fullName>
            </value>
            <value>
                <fullName>Wyoming</fullName>
            </value>
            <value>
                <fullName>Copano Pipeline</fullName>
            </value>
            <value>
                <fullName>Kinder Morgan Texas</fullName>
            </value>
            <value>
                <fullName>Energy Transfer</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Gulf South Pipeline Texas</fullName>
            </value>
            <value>
                <fullName>Enbridge</fullName>
            </value>
            <value>
                <fullName>Kinder Morgan Tejas</fullName>
            </value>
            <value>
                <fullName>Gathering</fullName>
            </value>
            <value>
                <fullName>Transmission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>