force-app/main/default/objects/Premises__c/fields/Properties_Created__c.field-meta.xml
<CustomField>
    <fullName>Properties_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Properties Created</label>
    <type>Checkbox</type>
</CustomField>