force-app/main/default/objects/Premises__c/fields/Property_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Property_Effective_Date__c</fullName>
    <label>Property Effective Date</label>
    <type>Date</type>
</CustomField>