force-app/main/default/objects/Premises__c/fields/Purchaser_or_Operator__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_or_Operator__c</fullName>
    <formula>IF(ISPICKVAL(Company_Role__c, &quot;Purchaser&quot;)
  , &quot;P&quot;
  , IF (ISPICKVAL(Company_Role__c, &quot;Operator&quot;)
      , &quot;O&quot;
      , null
    )
)</formula>
    <label>Purchaser or Operator</label>
    <type>Text</type>
</CustomField>