force-app/main/default/objects/Premises__c/fields/Qualifying_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Tax_Rate__c</fullName>
    <description>OK tax report</description>
    <label>Qualifying Tax Rate %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.00</fullName>
            </value>
            <value>
                <fullName>2.00</fullName>
            </value>
            <value>
                <fullName>4.00</fullName>
            </value>
            <value>
                <fullName>7.00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>