force-app/main/default/objects/Premises__c/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <label>Range</label>
    <length>20</length>
    <type>Text</type>
</CustomField>