force-app/main/default/objects/Premises__c/fields/Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Rate_Code__c</fullName>
    <description>The 3 digit rate code to determine TDSP tariff assignment.</description>
    <inlineHelpText>The 3 digit rate code to determine TDSP tariff assignment.</inlineHelpText>
    <label>Rate Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>