force-app/main/default/objects/Premises__c/fields/Related_To_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Acquisition__c</fullName>
    <label>Related To Acquisition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asgard</fullName>
            </value>
            <value>
                <fullName>Energon</fullName>
            </value>
            <value>
                <fullName>Nordic</fullName>
            </value>
            <value>
                <fullName>NWS</fullName>
            </value>
            <value>
                <fullName>OKESI</fullName>
            </value>
            <value>
                <fullName>POET</fullName>
            </value>
            <value>
                <fullName>Texon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>