force-app/main/default/objects/Premises__c/fields/RRC__c.field-meta.xml
<CustomField>
    <fullName>RRC__c</fullName>
    <formula>IF( FIND(&#39;-&#39;, Unit_Lease_Number__c ) = 0  
, NULL 
, RIGHT(Unit_Lease_Number__c,6)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RRC #</label>
    <type>Text</type>
</CustomField>