force-app/main/default/objects/Premises__c/fields/Safari_Premise_Key__c.field-meta.xml
<CustomField>
    <fullName>Safari_Premise_Key__c</fullName>
    <externalId>true</externalId>
    <label>Safari Premise Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>