force-app/main/default/objects/Premises__c/fields/Safari_Premise_Key_Formula__c.field-meta.xml
<CustomField>
    <fullName>Safari_Premise_Key_Formula__c</fullName>
    <formula>IF( FIND(&#39;-&#39;, Safari_Premise_Key__c ) = 0
  , NULL
  ,  MID( Safari_Premise_Key__c , FIND(&#39;-&#39;, Safari_Premise_Key__c ) + 1, LEN( Safari_Premise_Key__c ) - FIND(&#39;-&#39;, Safari_Premise_Key__c ) + 1) 
)</formula>
    <label>Safari Premise Key Formula</label>
    <type>Text</type>
</CustomField>