force-app/main/default/objects/Premises__c/fields/Safari_Sync_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Safari_Sync_Start_Date__c</fullName>
    <label>Safari Sync Start Date</label>
    <type>Date</type>
</CustomField>