force-app/main/default/objects/Premises__c/fields/Safari_Weather_Region_Formula__c.field-meta.xml
<CustomField>
    <fullName>Safari_Weather_Region_Formula__c</fullName>
    <formula>Weather_Station__r.Safari_Weather_Region_Name__c</formula>
    <label>Safari Weather Region Formula</label>
    <type>Text</type>
</CustomField>