force-app/main/default/objects/Premises__c/fields/Safari_Weather_Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Safari_Weather_Region_Name__c</fullName>
    <label>Safari Weather Region Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>