force-app/main/default/objects/Premises__c/fields/Sales_Rep_Changed__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Rep Changed</label>
    <type>Checkbox</type>
</CustomField>