force-app/main/default/objects/Premises__c/fields/School_Program__c.field-meta.xml
<CustomField>
    <fullName>School_Program__c</fullName>
    <description>is this premise part of a school program?</description>
    <inlineHelpText>is this premise part of a school program?</inlineHelpText>
    <label>School Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CJUMP</fullName>
            </value>
            <value>
                <fullName>IJUMP</fullName>
            </value>
            <value>
                <fullName>KJUMP</fullName>
            </value>
            <value>
                <fullName>LaClede</fullName>
            </value>
            <value>
                <fullName>MOPRC</fullName>
            </value>
            <value>
                <fullName>NJUMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>