force-app/main/default/objects/Premises__c/fields/School_Tariff_Tier_1__c.field-meta.xml
<CustomField>
    <fullName>School_Tariff_Tier_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>if premise is in a school program, what is the school tariff pga for tier 1 gas?</description>
    <inlineHelpText>if premise is in a school program, what is the school tariff pga for tier 1 gas?</inlineHelpText>
    <label>School Tariff Tier 1</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>