force-app/main/default/objects/Premises__c/fields/School_Tariff_Tier_2__c.field-meta.xml
<CustomField>
    <fullName>School_Tariff_Tier_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>if premise is in the Laclede school program, what is the school tariff pga for tier 2 gas?</description>
    <inlineHelpText>if premise is in the Laclede school program, what is the school tariff pga for tier 2 gas?</inlineHelpText>
    <label>School Tariff Tier 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Index__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Utility</value>
        </filterItems>
        <filterItems>
            <field>Index__c.Tariff_Rate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Index__c.School_Program__c</field>
            <operation>equals</operation>
            <valueField>$Source.School_Program__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.TDSP_Lookup__c</field>
            <operation>equals</operation>
            <value>a0R3000000AiQIp</value>
        </filterItems>
        <infoMessage>Filtering for Laclede school program pga rates. DO NOT REMOVE THIS FILTER.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Premises (School Tariff Tier 2)</relationshipLabel>
    <relationshipName>Premises1</relationshipName>
    <type>Lookup</type>
</CustomField>