force-app/main/default/objects/Premises__c/fields/SF_LIVE_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_LIVE_ID__c</fullName>
    <label>SF-LIVE ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>