force-app/main/default/objects/Premises__c/fields/SG_Balloted_Through__c.field-meta.xml
<CustomField>
    <fullName>SG_Balloted_Through__c</fullName>
    <description>What year are the balloted through?</description>
    <inlineHelpText>What year are the balloted through?</inlineHelpText>
    <label>SG Balloted Through</label>
    <length>4</length>
    <type>Text</type>
</CustomField>