force-app/main/default/objects/Premises__c/fields/SG_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>SG_Customer_Number__c</fullName>
    <label>SG Customer Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>