force-app/main/default/objects/Premises__c/fields/SG_DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>SG_DBA_Name__c</fullName>
    <label>SG DBA Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>