force-app/main/default/objects/Premises__c/fields/SG_Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>SG_Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SG Do Not Call</label>
    <type>Checkbox</type>
</CustomField>