force-app/main/default/objects/Premises__c/fields/SG_Email__c.field-meta.xml
<CustomField>
    <fullName>SG_Email__c</fullName>
    <label>SG Email</label>
    <type>Email</type>
</CustomField>