force-app/main/default/objects/Premises__c/fields/SG_First_Name__c.field-meta.xml
<CustomField>
    <fullName>SG_First_Name__c</fullName>
    <label>SG First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>