force-app/main/default/objects/Premises__c/fields/SG_Key__c.field-meta.xml
<CustomField>
    <fullName>SG_Key__c</fullName>
    <description>Combination of Account Number x Customer Number x Premise Number to identify a unique Source Gas Customer</description>
    <inlineHelpText>Combination of Account Number x Customer Number x Premise Number to identify a unique Source Gas Customer</inlineHelpText>
    <label>SG Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>