force-app/main/default/objects/Premises__c/fields/SG_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>SG_Last_Name__c</fullName>
    <label>SG Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>