force-app/main/default/objects/Premises__c/fields/SG_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>SG_Mailing_Address__c</fullName>
    <label>SG Mailing Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>