force-app/main/default/objects/Premises__c/fields/SG_Mailing_City_State__c.field-meta.xml
<CustomField>
    <fullName>SG_Mailing_City_State__c</fullName>
    <label>SG Mailing City/State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>