force-app/main/default/objects/Premises__c/fields/SG_Mailing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>SG_Mailing_Zip_Code__c</fullName>
    <label>SG Mailing Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>