force-app/main/default/objects/Premises__c/fields/SG_SIC__c.field-meta.xml
<CustomField>
    <fullName>SG_SIC__c</fullName>
    <label>SG SIC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>