force-app/main/default/objects/Premises__c/fields/SG_Telephone__c.field-meta.xml
<CustomField>
    <fullName>SG_Telephone__c</fullName>
    <label>SG Telephone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>