force-app/main/default/objects/Premises__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <inlineHelpText>Unique name for the premise, limited to 32 characters</inlineHelpText>
    <label>Short Name</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>