force-app/main/default/objects/Premises__c/fields/Smart_Meter_Status__c.field-meta.xml
<CustomField>
    <fullName>Smart_Meter_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the customer&#39;s meter a smart meter?</description>
    <label>Smart Meter?</label>
    <type>Checkbox</type>
</CustomField>