force-app/main/default/objects/Premises__c/fields/Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Square_Feet__c</fullName>
    <description>How many square feet of living space are in the premise</description>
    <label>Square Feet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>