force-app/main/default/objects/Premises__c/fields/State_Field_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Field_Code__c</fullName>
    <label>State Field Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>