force-app/main/default/objects/Premises__c/fields/State_MP_ID__c.field-meta.xml
<CustomField>
    <fullName>State_MP_ID__c</fullName>
    <description>LA tax report.  format is XXX-XXXX-XXXX-XXXXXX (need validation rule)</description>
    <inlineHelpText>format is XXX-XXXX-XXXX-XXXXXX</inlineHelpText>
    <label>State MP ID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>