force-app/main/default/objects/Premises__c/fields/StationCode__c.field-meta.xml
<CustomField>
    <fullName>StationCode__c</fullName>
    <description>The unique character code to identify a substation serving an ESI ID as assigned by the TDSP and used in the ERCOT Network Model</description>
    <inlineHelpText>The unique character code to identify a substation serving an ESI ID as assigned by the TDSP and used in the ERCOT Network Model</inlineHelpText>
    <label>Station Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>