force-app/main/default/objects/Premises__c/fields/StationName__c.field-meta.xml
<CustomField>
    <fullName>StationName__c</fullName>
    <description>The long name to identify a substation used in the ERCOT Network Model.</description>
    <inlineHelpText>The long name to identify a substation used in the ERCOT Network Model.</inlineHelpText>
    <label>Station Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>