force-app/main/default/objects/Premises__c/fields/Subject_to_Permit_Problem__c.field-meta.xml
<CustomField>
    <fullName>Subject_to_Permit_Problem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This premise may have permit issues that need to be verified with the TDSP/Utility.</description>
    <inlineHelpText>This premise may have permit issues that need to be verified with the TDSP/Utility.</inlineHelpText>
    <label>Subject to Permit Problem</label>
    <type>Checkbox</type>
</CustomField>