force-app/main/default/objects/Premises__c/fields/SWITCH_HOLD_INDICTOR__c.field-meta.xml
<CustomField>
    <fullName>SWITCH_HOLD_INDICTOR__c</fullName>
    <description>The indicator to identify if there are Switch Holds present at ERCOT .&#39;&#39;Y&#39;&#39;=Switch Hold present,&#39;&#39;N&#39;&#39;= No Switch Hold present</description>
    <inlineHelpText>The indicator to identify if there are Switch Holds present at ERCOT .&#39;&#39;Y&#39;&#39;=Switch Hold present,&#39;&#39;N&#39;&#39;= No Switch Hold present</inlineHelpText>
    <label>Switch Hold Indicator</label>
    <length>3</length>
    <type>Text</type>
</CustomField>