force-app/main/default/objects/Premises__c/fields/Taxable__c.field-meta.xml
<CustomField>
    <fullName>Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should taxes be applied to the purchaser?</description>
    <inlineHelpText>Should taxes be applied to the purchaser?</inlineHelpText>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>