force-app/main/default/objects/Premises__c/fields/TDSP_Lookup__c.field-meta.xml
<CustomField>
    <fullName>TDSP_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TDSP__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>only ACTIVE utilities are being returned</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>