force-app/main/default/objects/Premises__c/fields/Telemetry_Option__c.field-meta.xml
<CustomField>
    <fullName>Telemetry_Option__c</fullName>
    <label>Telemetry Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>