force-app/main/default/objects/Premises__c/fields/Township__c.field-meta.xml
<CustomField>
    <fullName>Township__c</fullName>
    <label>Township</label>
    <length>20</length>
    <type>Text</type>
</CustomField>