force-app/main/default/objects/Premises__c/fields/Transport_Exhibit__c.field-meta.xml
<CustomField>
    <fullName>Transport_Exhibit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport Exhibit</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Transport_Exhibit__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Facility_List__c</field>
            <operation>equals</operation>
            <valueField>Transport_Exhibit__c.CESContract__r.Facility_List__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Transport_Exhibit__c</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>