force-app/main/default/objects/Premises__c/fields/Transport_ID__c.field-meta.xml
<CustomField>
    <fullName>Transport_ID__c</fullName>
    <description>utility transport ID for this facility</description>
    <inlineHelpText>utility transport ID for this facility</inlineHelpText>
    <label>Transport ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>