force-app/main/default/objects/Premises__c/fields/Transport_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Transport_Start_Date__c</fullName>
    <inlineHelpText>Flow Date</inlineHelpText>
    <label>Transport Start Date</label>
    <type>Date</type>
</CustomField>