force-app/main/default/objects/Premises__c/fields/UF_Meter_Phone_Number_Changed__c.field-meta.xml
<CustomField>
    <fullName>UF_Meter_Phone_Number_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>track UFV changes for informatica safari sync</description>
    <inlineHelpText>track UFV changes for informatica safari sync</inlineHelpText>
    <label>UF Meter Phone Number Changed</label>
    <type>Checkbox</type>
</CustomField>