force-app/main/default/objects/Premises__c/fields/UF_Name_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_Acquisition__c</fullName>
    <formula>&#39;Acquisition&#39;</formula>
    <label>UF Name - Acquisition</label>
    <type>Text</type>
</CustomField>