force-app/main/default/objects/Premises__c/fields/UF_Name_Check_Digit__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_Check_Digit__c</fullName>
    <formula>&#39;Check Digit&#39;</formula>
    <label>UF Name - Check Digit</label>
    <type>Text</type>
</CustomField>