force-app/main/default/objects/Premises__c/fields/UF_Name_CNG_Sales__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_CNG_Sales__c</fullName>
    <formula>&#39;CNG Sales Account&#39;</formula>
    <label>UF Name - CNG Sales</label>
    <type>Text</type>
</CustomField>