force-app/main/default/objects/Premises__c/fields/UF_Name_Consolidated_Billing__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_Consolidated_Billing__c</fullName>
    <formula>IF (CONTAINS(Safari_Premise_Key__c, &#39;LIVE-&#39;), &#39;LDC Mail Code&#39;,&#39;Consolidated Billing&#39;)</formula>
    <label>UF Name - Consolidated Billing</label>
    <type>Text</type>
</CustomField>