force-app/main/default/objects/Premises__c/fields/UF_Name_Consultant__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_Consultant__c</fullName>
    <formula>&#39;Consultant&#39;</formula>
    <label>UF Name - Consultant</label>
    <type>Text</type>
</CustomField>