force-app/main/default/objects/Premises__c/fields/UF_Name_County__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_County__c</fullName>
    <formula>&#39;County&#39;</formula>
    <label>UF Name - County</label>
    <type>Text</type>
</CustomField>