force-app/main/default/objects/Premises__c/fields/UF_Name_Delivery_Point__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_Delivery_Point__c</fullName>
    <formula>&#39;Delivery Point&#39;</formula>
    <label>UF Name - Delivery Point</label>
    <type>Text</type>
</CustomField>